# GameTable

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  bandit-report.json  bandit.yaml  docker-compose.dev.yml  docker-compose.test.yml  pyproject.toml  pytest.ini  sonar-project.properties
backend/: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  README.md  data-source.ts  docker-compose.yml  index.ts  package.json  pyproject.toml  server.ts  tsconfig.json
backend/app/: main.py
backend/app/controller/: artist_controller.py  auth_controller.py  designer_controller.py  game_controller.py  genre_controller.py  language_controller.py  matchup_controller.py  mechanic_controller.py  move_controller.py  publisher_controller.py  review_controller.py  user_controller.py  video_controller.py  weather_controller.py
backend/app/model/: artists_model.py  designer_model.py  game_model.py  genre_model.py  language_model.py  matchup_model.py  mechanic_model.py  move_model.py  publisher_model.py  review_model.py  user_model.py  video_model.py
backend/app/repository/: artist_repository.py  designer_repository.py  game_repository.py  (+5 more)
backend/entity/: Game.ts  Genre.ts
backend/router/: gameRouter.ts
backend/service/: gameService.ts
backend/startup/: dbConnection.ts  init.ts  setupRouters.ts
backend/tests/: conftest.py
data-aggregator/: .gitignore  docker-compose.yml  pyproject.toml  text.xml  wutwut.xml
data-aggregator/app/: import_game.py  main.py  settings.py
data-aggregator/examples/: comments.xml  ratingcomments.xml  videos.xml
(+211 files in other folders)
