[project]
name = "gametable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "bandit>=1.9.2",
    "fastapi>=0.124.2",
    "httpx>=0.28.1",
    "pydantic[email]>=2.12.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "sentry-sdk[fastapi]>=2.47.0",
    "sqlalchemy>=2.0.45",
]
